--- a/src/Android_App/app/src/main/res/values/strings.xml
+++ b/src/Android_App/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Smart Glass App</string>
     <string name="action_settings">Settings</string>
+    <string name ="naviagtion_drawer_open">Open navigation drawer</string>
+    <string name ="naviagtion_drawer_close">Close navigation drawer</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -9,4 +11,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
