--- a/src/Android_App/app/src/main/res/values/strings.xml
+++ b/src/Android_App/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_maps">Maps</string>
+    <string name="service_name">service_name</string>
 
 </resources>
