added uml diagram

--- a/docs/_posts/dive-down/2022-07-18-firmware.md
+++ b/docs/_posts/dive-down/2022-07-18-firmware.md
@@ -146,6 +146,9 @@ portioned in the following way :
         since adding different fonts is memory expensive (especially for
         bigger ones), and, due to lack of time, did not have a clear use case.
 
+    For instance, you can find just below, the UML diagram of the "grahpical display" side of the firmware:
+    ![aforementioned UML diagram]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/f/uml.png)
+
 The details of all the implementations of the aforementioned structures
 and abstractions are left as a pleasure for the reader to discover by
 reading the code. Most of the crucial methods and classes have been 
