--- a/docs/_posts/dive-down/2022-07-18-firmware.md
+++ b/docs/_posts/dive-down/2022-07-18-firmware.md
@@ -11,7 +11,7 @@ Glasses, explain the reasoning behind the choices that have been taken
 in programming the firmware, and mention the difficulties one might
 encounter programming such a firmware.
 
-# Instructible – “running” the firmware
+# Instructible – using our firmware
 
 Once you have a functionning circuit with all the components mentioned in
 our hardware section, you will need to make these components interact
